--- a/app/src/main/res/navigation/dashboard_navigation.xml
+++ b/app/src/main/res/navigation/dashboard_navigation.xml
@@ -8,18 +8,18 @@
     <fragment
         android:id="@+id/navigation_explorer"
         android:name="com.eventurecapstone.eventure.view.saved_event.SavedEventFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_saved_event" />
+        android:label="@string/explorer"
+        tools:layout="@layout/fragment_explorer" />
 
     <fragment
         android:id="@+id/navigation_saved"
         android:name="com.eventurecapstone.eventure.view.explorer.ExplorerFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_explorer" />
+        android:label="@string/saved"
+        tools:layout="@layout/fragment_saved_event" />
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.eventurecapstone.eventure.view.profile.ProfileFragment"
-        android:label="@string/title_notifications"
+        android:label="@string/profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
