--- a/app/src/main/res/layout/fragment_explorer.xml
+++ b/app/src/main/res/layout/fragment_explorer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.explorer.ExplorerFragment">
+    tools:context=".view.dashboard.explorer.ExplorerFragment">
     
     <LinearLayout
         android:id="@+id/header"
