--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.detail.InfoFragment"
+    tools:context=".view.detail.info.InfoFragment"
     android:paddingTop="24dp"
     android:paddingEnd="24dp"
     android:paddingBottom="24dp"
