--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,7 +13,7 @@
         android:layout_height="150dp"
         android:contentDescription="@string/app_name"
         android:scaleType="centerCrop"
-        tools:src="@tools:sample/avatars"
+        android:src="@drawable/no_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
