--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -99,6 +99,7 @@
         />
 
     <TextView
+        android:id="@+id/event_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
