--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -242,7 +242,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/dark_mode"
+                    android:text="@string/title_notifications"
                     app:layout_constraintTop_toTopOf="@id/notification_switch"
                     app:layout_constraintBottom_toBottomOf="@id/notification_switch"
                     app:layout_constraintStart_toEndOf="@id/bell_icon"
