--- a/app/src/main/res/layout/activity_choose_category.xml
+++ b/app/src/main/res/layout/activity_choose_category.xml
@@ -7,4 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".view.choose_interest.ChooseCategoryActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvChooseCategory"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context="@layout/item_choose_interest" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
