--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Eventure" parent="Theme.Material3.DayNight">
-        <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/green_60</item>
         <item name="colorError">@color/red_60</item>
 
@@ -13,6 +12,11 @@
         <item name="colorError">@color/red_60</item>
 
         <item name="fontFamily">@font/poppins_regular</item>
+    </style>
+
+    <style name="Theme.Eventure.SplashScreen" parent="Theme.Eventure.NoActionBar">
+        <item name="android:background">@drawable/splashscreen</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="Theme.Eventure" parent="Base.Theme.Eventure" />
