--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/app_name"
-            app:srcCompat="@tools:sample/backgrounds/scenic" />
+            app:srcCompat="@drawable/ic_placeholder_image" />
 
     </androidx.cardview.widget.CardView>
 
