--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/explorer" />
 
     <item
+        android:id="@+id/navigation_maps"
+        android:icon="@drawable/ic_location"
+        android:title="@string/maps" />
+
+    <item
         android:id="@+id/navigation_saved"
         android:icon="@drawable/ic_bookmark"
         android:title="@string/saved" />
