--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,16 +23,23 @@
             android:padding="16dp"
             >
 
-            <ImageView
-                android:id="@+id/user_image"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/image_container"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:contentDescription="@string/app_name"
-                android:scaleType="centerCrop"
-                tools:src="@tools:sample/avatars"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintStart_toStartOf="parent" >
+
+                <ImageView
+                    android:id="@+id/user_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="centerCrop"
+                    tools:src="@tools:sample/avatars"
+                    />
+
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/username"
@@ -41,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/user_image"
+                app:layout_constraintStart_toEndOf="@id/image_container"
                 android:layout_marginStart="24dp"
                 />
 
