--- a/app/src/main/res/layout/activity_choose_category.xml
+++ b/app/src/main/res/layout/activity_choose_category.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.choose_interest.ChooseCategoryActivity">
+    tools:context=".view.choose_interest.choose_category.ChooseCategoryActivity">
 
     <TextView
         android:id="@+id/tvChooseCategory"
@@ -46,13 +46,12 @@
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="12dp"
-        android:alpha="0"
+        android:alpha="100"
         android:text="@string/save"
         app:cornerRadius="12dp"
         android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:alpha="100" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
