--- a/app/src/main/res/layout/activity_choose_event.xml
+++ b/app/src/main/res/layout/activity_choose_event.xml
@@ -5,10 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.choose_interest.ChooseEvent">
+    tools:context=".view.choose_interest.choose_event.ChooseEventActivity">
 
     <TextView
-        android:id="@+id/tvChooseCategory"
+        android:id="@+id/tvChooseEvent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
@@ -23,7 +23,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvChooseCategory"
+        android:id="@+id/rvChooseEvent"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -35,24 +35,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvChooseCategory"
-        app:layout_constraintBottom_toTopOf="@id/btnChooseCategory"
+        app:layout_constraintTop_toBottomOf="@+id/tvChooseEvent"
+        app:layout_constraintBottom_toTopOf="@id/btnChooseEvent"
         tools:listitem="@layout/item_choose_category" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnChooseCategory"
+        android:id="@+id/btnChooseEvent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="12dp"
-        android:alpha="0"
+        android:alpha="100"
         android:text="@string/save"
         app:cornerRadius="12dp"
         android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:alpha="100" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
