--- a/app/src/main/res/layout/activity_my_post.xml
+++ b/app/src/main/res/layout/activity_my_post.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            app:backgroundTint="@color/green_40"
             android:layout_margin="16dp"
             android:contentDescription="@string/app_name"
             app:srcCompat="@drawable/ic_plus"/>
