--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,6 +4,8 @@
         <!-- Customize your dark theme here. -->
         <item name="colorPrimary">@color/green_60</item>
         <item name="colorError">@color/red_60</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorAccent">@color/green_80</item>
 
         <item name="fontFamily">@font/poppins_regular</item>
     </style>
