--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.Eventure" parent="Theme.Material3.DayNight">
         <item name="colorPrimary">@color/green_60</item>
         <item name="colorError">@color/red_60</item>
+        <item name="colorOnPrimary">@color/black</item>
 
         <item name="fontFamily">@font/poppins_regular</item>
     </style>
