custom view for email and password

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -21,8 +21,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/changePasswordOldLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -30,15 +28,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="32dp"
-        android:alpha="0"
         app:boxCornerRadiusBottomEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusTopStart="12dp"
+        app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvChangePasswordOld"
-        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordOld"
-        tools:alpha="100">
+        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordOld">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/changePasswordOld"
@@ -48,7 +45,7 @@
             android:ems="10"
             android:textSize="12sp"
             android:padding="16dp"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -63,8 +60,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changePasswordOldLayout" />
 
-
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/changePasswordNewLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -72,17 +67,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="32dp"
-        android:alpha="0"
         app:boxCornerRadiusBottomEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusTopStart="12dp"
+        app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvChangePasswordNew"
-        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordNew"
-        tools:alpha="100">
+        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordNew">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.eventurecapstone.eventure.view.custom_view.EditTextPassword
             android:id="@+id/changePasswordNew"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -113,17 +107,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="32dp"
-        android:alpha="0"
         app:boxCornerRadiusBottomEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusTopStart="12dp"
+        app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvChangePasswordConfirm"
-        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordConfirm"
-        tools:alpha="100">
+        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordConfirm">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.eventurecapstone.eventure.view.custom_view.EditTextPassword
             android:id="@+id/changePasswordConfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -141,14 +134,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
-        android:alpha="0"
         android:text="@string/save"
         app:cornerRadius="12dp"
         android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/changePasswordConfirmLayout"
-        tools:alpha="100" />
+        app:layout_constraintTop_toBottomOf="@id/changePasswordConfirmLayout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
