--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvLoginTextEmail"
         tools:alpha="100">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.eventurecapstone.eventure.view.custom_view.EditTextEmail
             android:id="@+id/loginEmailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -138,7 +138,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvLoginTextPassword"
         tools:alpha="100">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.eventurecapstone.eventure.view.custom_view.EditTextPassword
             android:id="@+id/loginPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
