--- a/app/src/main/res/layout/activity_choose_category.xml
+++ b/app/src/main/res/layout/activity_choose_category.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.choose_interest.choose_category.ChooseCategoryActivity">
+    tools:context=".view.choose_category.ChooseCategoryActivity">
 
     <TextView
         android:id="@+id/tvChooseCategory"
