--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -23,7 +23,7 @@
         android:layout_height="150dp"
         android:contentDescription="@string/app_name"
         android:scaleType="centerCrop"
-        android:src="@drawable/no_image"
+        tools:src="@tools:sample/avatars"
         />
 
     </com.google.android.material.card.MaterialCardView>
@@ -37,6 +37,7 @@
         app:layout_constraintTop_toBottomOf="@id/image_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="center"
         android:layout_marginTop="12dp"
         />
 
